<resources>
    <string name="app_name">2018110436沈馨雨</string>
    <string name="title_home">天气</string>
    <string name="title_dashboard">游戏</string>
    <string name="title_notifications">音乐</string>
    <string name="title_watch">秒表</string>
    <string name="timer">00:00:00</string>
    <string name="start">开始</string>
    <string name="restart">重新开始</string>
    <string name="score">分数:</string>
    <string name="reset">重新开始</string>
    <string name="play">播放</string>
    <string name="pause">停止</string>
    <string name="stop">暂停</string>
    <string name="next">下一首</string>
    <string name="prev">上一首</string>
    <string name="textview">TextView</string>
    <string name="MusicName">音乐名</string>
    <string name="musicnumber">音乐排序</string>
</resources>